<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/foodGroup"
            app:layout_gravity="center"
            app:layout_row="0"
            app:layout_column="0" />
        <Spinner
            android:id="@+id/foodGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_columnSpan="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/foodType"
            app:layout_gravity="center"
            app:layout_row="1"
            app:layout_column="0" />

        <Spinner
            android:id="@+id/foodType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_columnSpan="1" />


    </android.support.v7.widget.GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quantity"
            android:gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amount"
            android:hint="@string/amount"/>

        <Spinner
            android:id="@+id/servingsType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/meal_time"/>

        <Spinner
            android:id="@+id/timePeriod"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/date"
            android:hint="@string/today"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:id="@+id/logEntryButton"
        android:text="Log Entry"/>

    </LinearLayout>


</LinearLayout>
